--- a/que-hacemos.html
+++ b/que-hacemos.html
@@ -550,7 +550,7 @@
                             <h4 class="widget-title">Soluciones</h4>
                             <ul>
                                 <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Infraestructura</a>
+                                    <a href="index.html"><i class="fas fa-angle-right"></i> Infraestructura</a>
                                 </li>
                                 <li>
                                     <a href="./software/index.html"><i class="fas fa-angle-right"></i> Software</a>
@@ -625,6 +625,7 @@ San Isidro-Lima
                 </div>
             </div>
         </div>
+        <!-- End Footer Bottom -->
     </footer>
     <!-- End Footer -->
     
