--- a/software/clientes.html
+++ b/software/clientes.html
@@ -96,101 +96,107 @@
      <!-- Header 
      ============================================= -->
      <header id="home">
- 
-         <!-- Start Navigation -->
-         <nav class="navbar navbar-default attr-border navbar-sticky bootsnav">
- 
-             <div class="container">
- 
-                 <!-- Start Header Navigation -->
-                 <div class="navbar-header">
-                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                         <i class="fa fa-bars"></i>
-                     </button>
-                     <a class="navbar-brand" href="index.html">
-                         <img src="assets/img/SST-SOFTWARE--LOGO.svg" class="logo" alt="Logo SST Software">
-                     </a>
-                 </div>
-                 <!-- End Header Navigation -->
- 
-                 <div class="collapse navbar-collapse" id="navbar-menu">
-                     <ul class="nav navbar-nav navbar-right" data-in="#" data-out="#"> 
-                      <li><a  href="index.html">Inicio</a></li>
-                         <li class="dropdown megamenu-fw">
-                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios</a>
-                             <ul class="dropdown-menu megamenu-content" role="menu">
-                                 <li>
-                                     <div class="row">
-                                         <div class="col-menu col-lg-4">
-                                             <h6 class="title">Desarrollo de software</h6>
-                                             <div class="content">
-                                                 <ul class="menu-col">
-                                                     <li><a href="#">Aplicaciones móviles
-                                                     </a></li>
-                                                     <li><a href="#">Web & Mobile
-                                                     </a></li>
-                                                     <li><a href="#">Arquitectura de Software
-                                                     </a></li>
-                                                     <li><a href="#">Servicios de DevOps
-                                                     </a></li>
-                                                     <li><a href="#">Diseño UX/UI
-                                                     </a></li>
-                                                     <li><a href="#">QA
-                                                     </a></li>
-                                                 </ul>
-                                             </div>
-                                         </div>
-                                         <div class="col-menu col-lg-4">
-                                             <h6 class="title">Inteligencia Artificial</h6>
-                                             <div class="content">
-                                                 <ul class="menu-col">
-                                                 </ul>
-                                             </div>
-                                         </div>
-                                         <div class="col-menu col-lg-4">
-                                             <h6 class="title">Servicios Cloud</h6>
-                                             <div class="content">
-                                                 <ul class="menu-col">
-                                                     <li><a href="#">Cloud Advisor 
-                                                     </a></li>
-                                                     <li><a href="#">Cloud Transformer 
-                                                     </a></li>
-                                                     <li><a href="#">Cloud Optimizer
-                                                     </a></li>
-                                                     <li><a href="#">Multi Cloud Solution 
-                                                     </a></li>
-                                                     <li><a href="#">Cloud Native 
-                                                     </a></li>
-                                                     <li><a href="#">Cyber Security
-                                                     </a></li>
-                                                 </ul>
-                                             </div>
-                                         </div>
-                                     </div>
-                                 </li>
-                             </ul>
-                         </li>
-                         <li>
-                             <a href="portafolio.html">Proyectos</a>
-                         </li>
-                         <li>
-                             <a class="active" href="clientes.html">Clientes</a>
-                         </li>
-                         <li>
-                             <a href="contacto.html">Contacto</a>
-                         </li>
-                         <li class="cotizar">
-                             <div class="slider-button">
-                                 <a data-animation="animated slideInUp" class="btn btn-theme effect btn-md" href="#">Cotizar</a>
-                         </li>
-                     </ul>
-                 </div>
-             </div>
- 
-         </nav>
-         <!-- End Navigation -->
- 
-     </header>
+
+        <!-- Start Navigation -->
+        <nav class="navbar navbar-default attr-border navbar-sticky bootsnav">
+
+            <div class="container">
+
+                <!-- Start Header Navigation -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                        <i class="fa fa-bars"></i>
+                    </button>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="assets/img/SST-SOFTWARE--LOGO.svg" class="logo" alt="Logo SST Software">
+                    </a>
+                </div>
+                <!-- End Header Navigation -->
+
+                <div class="collapse navbar-collapse" id="navbar-menu">
+                    <ul class="nav navbar-nav navbar-right" data-in="#" data-out="#"> 
+                     <li><a class="active" href="index.html">Inicio</a></li>
+                        <li class="dropdown megamenu-fw">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios</a>
+                            <ul class="dropdown-menu megamenu-content" role="menu">
+                                <li>
+                                    <div class="row">
+                                        <div class="col-menu col-lg-4">
+                                            <h6 class="title">Desarrollo de software</h6>
+                                            <div class="content">
+                                                <ul class="menu-col">
+                                                    <li><a href="aplicacion-mobil.html">Aplicaciones móviles
+                                                    </a></li>
+                                                    <li><a href="desarrollo-web.html">Web & Mobile
+                                                    </a></li>
+                                                    <li><a href="arquitectura-software.html">Arquitectura de Software
+                                                    </a></li>
+                                                    <li><a href="servicios-devops.html">Servicios de DevOps
+                                                    </a></li>
+                                                    <li><a href="diseño-ui-ux.html">Diseño UX/UI
+                                                    </a></li>
+                                                    <li><a href="qa.html">QA
+                                                    </a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="col-menu col-lg-4">
+                                            <h6 class="title">Inteligencia Artificial</h6>
+                                            <div class="content">
+                                                <ul class="menu-col">
+                                                    <li><a href="analisis-datos.html">Análisis de datos
+                                                    </a></li>
+                                                    <li><a href="sistema-vigilancia.html">Sistemas de vigilancia
+                                                    </a></li>
+                                                    <li><a href="simulacion-modelado.html">Simulación y modelado
+                                                    </a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="col-menu col-lg-4">
+                                            <h6 class="title">Servicios Cloud</h6>
+                                            <div class="content">
+                                                <ul class="menu-col">
+                                                    <li><a href="cloud-advisor.html">Cloud Advisor 
+                                                    </a></li>
+                                                    <li><a href="cloud-transformer.html">Cloud Transformer 
+                                                    </a></li>
+                                                    <li><a href="cloud-optimizer.html">Cloud Optimizer
+                                                    </a></li>
+                                                    <li><a href="multi-cloud.html">Multi Cloud Solution 
+                                                    </a></li>
+                                                    <li><a href="cloud-native.html">Cloud Native 
+                                                    </a></li>
+                                                    <li><a href="cyber-security.html">Cyber Security
+                                                    </a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="portafolio.html">Proyectos</a>
+                        </li>
+                        <li>
+                            <a href="clientes.html">Clientes</a>
+                        </li>
+                        <li>
+                            <a href="contacto.html">Contacto</a>
+                        </li>
+                        <li class="cotizar">
+                            <div class="slider-button">
+                                <a data-animation="animated slideInUp" class="btn btn-theme effect btn-md" href="#">Cotizar</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </nav>
+        <!-- End Navigation -->
+
+    </header>
     <!-- End Header -->
 
     <!-- Start Breadcrumb 
