--- a/software/projects-details.html
+++ b/software/projects-details.html
@@ -94,7 +94,7 @@
     <header id="home">
 
         <!-- Start Navigation -->
-        <nav class="navbar navbar-default attr-border logo-less small-pad navbar-sticky bootsnav">
+        <nav class="navbar navbar-default attr-border navbar-sticky bootsnav">
 
             <div class="container">
 
@@ -104,111 +104,89 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="assets/img/SST-SOFTWARE--LOGO.svg" class="logo" alt="Logo SST Software">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
-                    <ul class="nav navbar-nav navbar-center" data-in="#" data-out="#">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle active" data-toggle="dropdown" >Home</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="index.html">Home Version One</a></li>
-                                <li><a href="index-2.html">Home Version Two</a></li>
-                                <li><a href="index-3.html">Home Version Three</a></li>
-                                <li><a href="index-4.html">Home Version Four</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle smooth-menu" data-toggle="dropdown" >Pages</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="about-us.html">About Us</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
-                                <li><a href="faq.html">Faq</a></li>
-                                <li><a href="404.html">Error Page</a></li>
-                            </ul>
-                        </li>
+                    <ul class="nav navbar-nav navbar-right" data-in="#" data-out="#"> 
+                     <li><a class="active" href="index.html">Inicio</a></li>
                         <li class="dropdown megamenu-fw">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios</a>
                             <ul class="dropdown-menu megamenu-content" role="menu">
                                 <li>
                                     <div class="row">
-                                        <div class="col-menu col-lg-3">
-                                            <h6 class="title">Masonary Colum</h6>
+                                        <div class="col-menu col-lg-4">
+                                            <h6 class="title">Desarrollo de software</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="project-2-colum.html">Masonary Two Colums</a></li>
-                                                    <li><a href="project-3-colum.html">Masonary Three Colums</a></li>
-                                                    <li><a href="project-4-colum.html">Masonary Four Colums</a></li>
+                                                    <li><a href="aplicacion-mobil.html">Aplicaciones móviles
+                                                    </a></li>
+                                                    <li><a href="desarrollo-web.html">Web & Mobile
+                                                    </a></li>
+                                                    <li><a href="arquitectura-software.html">Arquitectura de Software
+                                                    </a></li>
+                                                    <li><a href="servicios-devops.html">Servicios de DevOps
+                                                    </a></li>
+                                                    <li><a href="diseño-ui-ux.html">Diseño UX/UI
+                                                    </a></li>
+                                                    <li><a href="qa.html">QA
+                                                    </a></li>
                                                 </ul>
                                             </div>
-                                        </div><!-- end col-3 -->
-                                        <div class="col-menu col-lg-3">
-                                            <h6 class="title">Grid Colum</h6>
+                                        </div>
+                                        <div class="col-menu col-lg-4">
+                                            <h6 class="title">Inteligencia Artificial</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="project-grid-2-colum.html">Grid Two Colums</a></li>
-                                                    <li><a href="project-grid-3-colum.html">Grid Three Colums</a></li>
-                                                    <li><a href="project-grid-4-colum.html">Grid Four Colums</a></li>
+                                                    <li><a href="analisis-datos.html">Análisis de datos
+                                                    </a></li>
+                                                    <li><a href="sistema-vigilancia.html">Sistemas de vigilancia
+                                                    </a></li>
+                                                    <li><a href="simulacion-modelado.html">Simulación y modelado
+                                                    </a></li>
                                                 </ul>
                                             </div>
-                                        </div><!-- end col-3 -->
-                                        <div class="col-menu col-lg-3">
-                                            <h6 class="title">Additional Version</h6>
+                                        </div>
+                                        <div class="col-menu col-lg-4">
+                                            <h6 class="title">Servicios Cloud</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="project-carousel.html">Project Carousel</a></li>
-                                                    <li><a href="projects-details.html">Project Details</a></li>
+                                                    <li><a href="cloud-advisor.html">Cloud Advisor 
+                                                    </a></li>
+                                                    <li><a href="cloud-transformer.html">Cloud Transformer 
+                                                    </a></li>
+                                                    <li><a href="cloud-optimizer.html">Cloud Optimizer
+                                                    </a></li>
+                                                    <li><a href="multi-cloud.html">Multi Cloud Solution 
+                                                    </a></li>
+                                                    <li><a href="cloud-native.html">Cloud Native 
+                                                    </a></li>
+                                                    <li><a href="cyber-security.html">Cyber Security
+                                                    </a></li>
                                                 </ul>
                                             </div>
-                                        </div><!-- end col-3 -->
-                                        <div class="col-menu col-lg-3">
-                                            <h6 class="title">Additional Pages</h6>
-                                            <div class="content">
-                                                <ul class="menu-col">
-                                                    <li><a href="#">login</a></li>
-                                                    <li><a href="#">register</a></li>
-                                                </ul>
-                                            </div>
-                                        </div><!-- end col-3 -->
-                                    </div><!-- end row -->
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Services</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="services.html">Services Version One</a></li>
-                                <li><a href="services-2.html">Services Version Two</a></li>
-                                <li><a href="services-3.html">Services Version Three</a></li>
-                                <li><a href="services-details.html">Services Details</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Team</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="team.html">Team Grid</a></li>
-                                <li><a href="team-carousel.html">Team Carousel</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Blog</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="blog-standard.html">Blog Standard</a></li>
-                                <li><a href="blog-with-sidebar.html">Blog With Sidebar</a></li>
-                                <li><a href="blog-2-colum.html">Blog Grid Two Colum</a></li>
-                                <li><a href="blog-3-colum.html">Blog Grid Three Colum</a></li>
-                                <li><a href="blog-single.html">Blog Single</a></li>
-                                <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>
-                            </ul>
+                        <li>
+                            <a href="portafolio.html">Proyectos</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact Us</a>
+                            <a href="clientes.html">Clientes</a>
+                        </li>
+                        <li>
+                            <a href="contacto.html">Contacto</a>
+                        </li>
+                        <li class="cotizar">
+                            <div class="slider-button">
+                                <a data-animation="animated slideInUp" class="btn btn-theme effect btn-md" href="#">Cotizar</a>
                         </li>
                     </ul>
-                </div><!-- /.navbar-collapse -->
+                </div>
             </div>
 
         </nav>
