--- a/automatizacion-con-ia.html
+++ b/automatizacion-con-ia.html
@@ -348,13 +348,13 @@
                                     <a href="index.html"><i class="fas fa-angle-right"></i> Infraestructura</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html"><i class="fas fa-angle-right"></i> Software</a>
+                                    <a href="./software/index.html"><i class="fas fa-angle-right"></i> Software</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html"><i class="fas fa-angle-right"></i> Consultoria</a>
+                                    <a href="#"><i class="fas fa-angle-right"></i> Consultoria</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html"><i class="fas fa-angle-right"></i> Marketing Digital</a>
+                                    <a href="#"><i class="fas fa-angle-right"></i> Marketing Digital</a>
                                 </li>
                             </ul>
                         </div>
@@ -420,6 +420,7 @@ San Isidro-Lima
                 </div>
             </div>
         </div>
+        <!-- End Footer Bottom -->
     </footer>
     <!-- End Footer -->
     
