--- a/inteligencia-negocios-empresas.html
+++ b/inteligencia-negocios-empresas.html
@@ -261,13 +261,13 @@
                                     <a href="index.html"><i class="fas fa-angle-right"></i> Infraestructura</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html"><i class="fas fa-angle-right"></i> Software</a>
+                                    <a href="./software/index.html"><i class="fas fa-angle-right"></i> Software</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html"><i class="fas fa-angle-right"></i> Consultoria</a>
+                                    <a href="#"><i class="fas fa-angle-right"></i> Consultoria</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html"><i class="fas fa-angle-right"></i> Marketing Digital</a>
+                                    <a href="#"><i class="fas fa-angle-right"></i> Marketing Digital</a>
                                 </li>
                             </ul>
                         </div>
@@ -333,6 +333,7 @@ San Isidro-Lima
                 </div>
             </div>
         </div>
+        <!-- End Footer Bottom -->
     </footer>
     <!-- End Footer -->
     
