--- a/software/arquitectura-software.html
+++ b/software/arquitectura-software.html
@@ -116,9 +116,9 @@
 
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="#" data-out="#"> 
-                     <li><a  href="index.html">Inicio</a></li>
+                     <li><a class="active" href="index.html">Inicio</a></li>
                         <li class="dropdown megamenu-fw">
-                            <a href="#" class="dropdown-toggle active" data-toggle="dropdown">Servicios</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios</a>
                             <ul class="dropdown-menu megamenu-content" role="menu">
                                 <li>
                                     <div class="row">
@@ -126,17 +126,17 @@
                                             <h6 class="title">Desarrollo de software</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="#">Aplicaciones móviles
+                                                    <li><a href="aplicacion-mobil.html">Aplicaciones móviles
                                                     </a></li>
-                                                    <li><a href="#">Web & Mobile
+                                                    <li><a href="desarrollo-web.html">Web & Mobile
                                                     </a></li>
-                                                    <li><a href="#">Arquitectura de Software
+                                                    <li><a href="arquitectura-software.html">Arquitectura de Software
                                                     </a></li>
-                                                    <li><a href="#">Servicios de DevOps
+                                                    <li><a href="servicios-devops.html">Servicios de DevOps
                                                     </a></li>
-                                                    <li><a href="#">Diseño UX/UI
+                                                    <li><a href="diseño-ui-ux.html">Diseño UX/UI
                                                     </a></li>
-                                                    <li><a href="#">QA
+                                                    <li><a href="qa.html">QA
                                                     </a></li>
                                                 </ul>
                                             </div>
@@ -145,6 +145,12 @@
                                             <h6 class="title">Inteligencia Artificial</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
+                                                    <li><a href="analisis-datos.html">Análisis de datos
+                                                    </a></li>
+                                                    <li><a href="sistema-vigilancia.html">Sistemas de vigilancia
+                                                    </a></li>
+                                                    <li><a href="simulacion-modelado.html">Simulación y modelado
+                                                    </a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -152,17 +158,17 @@
                                             <h6 class="title">Servicios Cloud</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="#">Cloud Advisor 
+                                                    <li><a href="cloud-advisor.html">Cloud Advisor 
                                                     </a></li>
-                                                    <li><a href="#">Cloud Transformer 
+                                                    <li><a href="cloud-transformer.html">Cloud Transformer 
                                                     </a></li>
-                                                    <li><a href="#">Cloud Optimizer
+                                                    <li><a href="cloud-optimizer.html">Cloud Optimizer
                                                     </a></li>
-                                                    <li><a href="#">Multi Cloud Solution 
+                                                    <li><a href="multi-cloud.html">Multi Cloud Solution 
                                                     </a></li>
-                                                    <li><a href="#">Cloud Native 
+                                                    <li><a href="cloud-native.html">Cloud Native 
                                                     </a></li>
-                                                    <li><a href="#">Cyber Security
+                                                    <li><a href="cyber-security.html">Cyber Security
                                                     </a></li>
                                                 </ul>
                                             </div>
