--- a/software/index.html
+++ b/software/index.html
@@ -145,6 +145,12 @@
                                             <h6 class="title">Inteligencia Artificial</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
+                                                    <li><a href="analisis-datos.html">Análisis de datos
+                                                    </a></li>
+                                                    <li><a href="sistema-vigilancia.html">Sistemas de vigilancia
+                                                    </a></li>
+                                                    <li><a href="simulacion-modelado.html">Simulación y modelado
+                                                    </a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -152,17 +158,17 @@
                                             <h6 class="title">Servicios Cloud</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="#">Cloud Advisor 
+                                                    <li><a href="cloud-advisor.html">Cloud Advisor 
                                                     </a></li>
-                                                    <li><a href="#">Cloud Transformer 
+                                                    <li><a href="cloud-transformer.html">Cloud Transformer 
                                                     </a></li>
-                                                    <li><a href="#">Cloud Optimizer
+                                                    <li><a href="cloud-optimizer.html">Cloud Optimizer
                                                     </a></li>
-                                                    <li><a href="#">Multi Cloud Solution 
+                                                    <li><a href="multi-cloud.html">Multi Cloud Solution 
                                                     </a></li>
-                                                    <li><a href="#">Cloud Native 
+                                                    <li><a href="cloud-native.html">Cloud Native 
                                                     </a></li>
-                                                    <li><a href="#">Cyber Security
+                                                    <li><a href="cyber-security.html">Cyber Security
                                                     </a></li>
                                                 </ul>
                                             </div>
