Cambios en SST principal 4/4/2023

--- a/trace-erp-restaurante.html
+++ b/trace-erp-restaurante.html
@@ -111,8 +111,8 @@
                                         
                                         <a class="idioma" href="#"><img src="./assets/img/peru.png" alt=""> <span class="mt-5 idiom-change">ES</span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="project-2-colum.html">Español</a></li>
-                                            <li><a href="project.html">English</a></li>
+                                            <li><a href="#">Español</a></li>
+                                            <li><a href="#">English</a></li>
                                         </ul>
                                     </li>
 
@@ -311,7 +311,7 @@
                                     <a href="./software/index.html"><i class="fas fa-angle-right"></i> Software</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Consultoria</a>
+                                    <a href="#"><i class="fas fa-angle-right"></i> Consultoría</a>
                                 </li>
                                 <li>
                                     <a href="#"><i class="fas fa-angle-right"></i> Marketing Digital</a>
