--- a/tecnologia-actual.html
+++ b/tecnologia-actual.html
@@ -112,8 +112,8 @@
                                         
                                         <a class="idioma" href="#"><img src="./assets/img/peru.png" alt=""> <span class="mt-5 idiom-change">ES</span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="project-2-colum.html">Español</a></li>
-                                            <li><a href="project.html">English</a></li>
+                                            <li><a href="#">Español</a></li>
+                                            <li><a href="#">English</a></li>
                                         </ul>
                                     </li>
 
@@ -412,7 +412,7 @@
                                     <a href="./software/index.html"><i class="fas fa-angle-right"></i> Software</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Consultoria</a>
+                                    <a href="#"><i class="fas fa-angle-right"></i> Consultoría</a>
                                 </li>
                                 <li>
                                     <a href="#"><i class="fas fa-angle-right"></i> Marketing Digital</a>
