--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -45,7 +45,7 @@
     ============================================= -->
     <header>
         <!-- Start Navigation -->
-        <nav class="navbar mobile-sidenav small-pad brand-style-bg nav-border attr-border navbar-sticky navbar-default validnavs">
+        <nav class="navbar navbar-transparent mobile-sidenav small-pad brand-style-bg nav-border attr-border navbar-sticky navbar-default validnavs">
 
             <!-- Start Top Search -->
             <div class="top-search">
@@ -142,6 +142,18 @@
     </header>
     <!-- End Header -->
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  $(document).ready(function() {
+    $(window).scroll(function() {
+      if ($(this).scrollTop() > 50) { // Change 50 to the desired scroll position
+        $('.navbar').addClass('navbar-colored');
+      } else {
+        $('.navbar').removeClass('navbar-colored');
+      }
+    });
+  });
+</script>
 
     <div class="banner-creado">
         <div class="banner-image-creado"  style="background: url(assets/img/quienes-somos/hero-quienes-somos.png);"></div>
@@ -196,7 +208,7 @@
 
     <!-- Start Faq 
     ============================================= -->
-    <div class="faq-area default-padding overflow-hidden">
+    <div class="faq-area default-padding overflow-hidden padding-inicio">
         <!-- Start Shape -->
         <div class="shape">
             <div class="circle-shape"></div>
