--- a/talento-humano-software.html
+++ b/talento-humano-software.html
@@ -40,7 +40,7 @@
     ============================================= -->
     <header>
         <!-- Start Navigation -->
-        <nav class="navbar mobile-sidenav small-pad brand-style-bg nav-border attr-border navbar-sticky navbar-default validnavs">
+        <nav class="navbar  mobile-sidenav small-pad brand-style-bg nav-border attr-border navbar-sticky navbar-default validnavs">
 
             <!-- Start Top Search -->
             <div class="top-search">
@@ -137,6 +137,18 @@
     </header>
     <!-- End Header -->
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  $(document).ready(function() {
+    $(window).scroll(function() {
+      if ($(this).scrollTop() > 50) { // Change 50 to the desired scroll position
+        $('.navbar').addClass('navbar-colored');
+      } else {
+        $('.navbar').removeClass('navbar-colored');
+      }
+    });
+  });
+</script>
 
     <!-- Start Blog
     ============================================= -->
